--- a/templates/css/style.css
+++ b/templates/css/style.css
@@ -7,9 +7,9 @@ body {
 }
 
 #sidebar {
-    width: 22%;
+    width: 250px;
     background: #f8f9fa;
-    border-right: 1px solid #dee2e6;
+    /*border-right: 1px solid #dee2e6;*/
     overflow-y: auto;
     padding: 10px;
 }
@@ -55,4 +55,28 @@ pre {
 .detail-section strong {
     display: inline-block;
     width: 150px;
+}
+
+.method {
+    background-color: #3592b7;
+    border-radius: 3px;
+    padding: 3px;
+    font-size: 12px;
+    color: white;
+    display: inline-block;
+    width: 36px;
+    text-align: center;
+}
+
+.delete {
+    background-color: red;
+    border-radius: 3px;
+    padding: 1px;
+    font-size: 12px;
+    color: white;
+    display: inline-block;
+    text-align: center;
+    border-color: transparent;
+    margin-left: 8px;
+    width: 16px;
 }
