--- a/templates/css/style.css
+++ b/templates/css/style.css
@@ -69,14 +69,11 @@ pre {
 }
 
 .delete {
-    background-color: red;
+    background-color: crimson;
     border-radius: 3px;
-    padding: 1px;
-    font-size: 12px;
     color: white;
     display: inline-block;
     text-align: center;
     border-color: transparent;
-    margin-left: 8px;
-    width: 16px;
+    width: 100%;
 }
