--- a/templates/index.html
+++ b/templates/index.html
@@ -11,7 +11,9 @@
     </style>
 </head>
 <body>
-    <div id="sidebar"></div>
+    <div id="sidebar">
+
+    </div>
     <div id="main-content">
         <h3>Request Details</h3>
         <div class="detail-section">
